Fixed margin issues on iphone 5

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,9 +27,8 @@ body {
     font-size: 30px;
 }
 
-#outputArea {
+.row {
     margin-left: 15%;
-    margin-right: 15%;
     margin-bottom: 50px;
 }
 
@@ -50,9 +49,7 @@ select {
 @media only screen and (max-width: 320px) {
     /* For mobile phones: */
    #outputArea {
-        margin-left: 15%;
         margin-right: 15%;
-
     }
     form {
         display: block;
